Closed Bug 1940588 Opened 1 month ago Closed 1 month ago

MboxMsgOutputStream isn't threadsafe

Categories

(MailNews Core :: General, defect)

defect

Tracking

(Not tracked)

RESOLVED FIXED
136 Branch

People

(Reporter: benc, Assigned: benc)

References

Details

Attachments

(2 files)

Following on from Bug 1931863.
MboxMsgOutputStream is a blocking stream and so could be potentially be called from other threads (eg the STS thread, when adapting the stream for async writing).
So all the public methods need to be threadsafe.

The note in the nsIOutputStream IDL only talks about protecting the refcount, but I think it all needs to be threadsafe.
https://searchfox.org/comm-central/source/mozilla/xpcom/io/nsIOutputStream.idl#48

Pushed by kaie@kuix.de:
https://hg.mozilla.org/comm-central/rev/e1ed22af0b3c
Make MboxMsgOutputStream threadsafe. r=mkmelin

Status: ASSIGNED → RESOLVED
Closed: 1 month ago
Resolution: --- → FIXED

reopen to land the comment tweak

Status: RESOLVED → REOPENED
Resolution: FIXED → ---

Pushed by arschmitz@thunderbird.net:
https://hg.mozilla.org/comm-central/rev/e8a6d75aee0b
Comment tweak on MboxMsgOutputStream locking. r=kaie

Status: REOPENED → RESOLVED
Closed: 1 month ago1 month ago
Resolution: --- → FIXED
Target Milestone: --- → 136 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: