Bug 1940588 - Make MboxMsgOutputStream threadsafe. r=mkmelin

Differential Revision: https://phabricator.services.mozilla.com/D233583

--HG--
extra : amend_source : 889a89c54ba5443be8ecc093cdc73b77d8b96cb4